[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ostats"
authors = [{name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["online algorithm", "online mean", "online variance",
            "online covariance", "online statistics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ntessore/ostats"
Issues = "https://github.com/ntessore/ostats/issues"

[tool.flit.sdist]
exclude = [".*"]
